--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     	<div class="container">
             <h2 class='container-heading'><span class="heading_font">Customer Forecasting</span></h2>
             <div class='description'>
-    			<p>Check whether customer could leave or will be staying chances.</p>
+    			<p>Check whether customer could leave or will stay.</p>
     		</div>
     	</div>
 
@@ -60,11 +60,11 @@
         <!-- Footer -->
        <div class='footer'>
            <div class="contact">
-               <a target="_blank" href="https://github.com/tanujdhiman/"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.linkedin.com/in/tanuj-dhiman-a5647a16b/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.kaggle.com/tanujdhiman/"><i class="fab fa-kaggle fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://github.com/vaibhavshah1234"><i class="fab fa-github fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://www.linkedin.com/in/vaibhav-shah-704104212"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a target="_blank" https://twitter.com/@vaibhav65921573"><i class="fab fa-kaggle fa-lg contact-icon"></i></a>
            </div>
-           <p class='footer-description'>Made with ❤️ by TeamOutliers.</p>
+           <p class='footer-description'>©2021 Vaibhav Shah.</p>
        </div>
 
     </body>
