--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
            <div class="contact">
                <a target="_blank" href="https://github.com/vaibhavshah1234"><i class="fab fa-github fa-lg contact-icon"></i></a>
                <a target="_blank" href="https://www.linkedin.com/in/vaibhav-shah-704104212"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
-               <a target="_blank" https://twitter.com/@vaibhav65921573"><i class="fab fa-kaggle fa-lg contact-icon"></i></a>
+               <a target="_blank" https://twitter.com/@vaibhav65921573"><i class="fab fa-twitter fa-lg contact-icon"></i></a>
            </div>
            <p class='footer-description'>©2021 Vaibhav Shah.</p>
        </div>
